Correct displaying content of error pages on mobile

--- a/less/style.less
+++ b/less/style.less
@@ -2855,7 +2855,8 @@ body.error-page {
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  height: 500px;
+  padding-bottom: 2rem;
+  min-height: 500px;
   background-image: url(../img/error-page-back-op.png);
   background-repeat: no-repeat;
   background-size: cover;
